syntax = "proto3";

package github.maxiiiiim.crnt_chat_service.api.chat;

option go_package = "github.com/Maxiiiiim/crnt-chat-service/api/chat;chat";

import "api/chat/models.proto";
import "google/protobuf/timestamp.proto";


message SendMessageRequest {
  string sender_id = 1;
  string dialog_id = 2;
  MessageContent content = 3;
}

message SendMessageResponse {
  Message message = 1;
}

message GetDialogMessagesRequest{
  string dialog_id = 1;
  string offset_id = 2;
  uint64 limit = 3;
  string user_id = 4;
}

message GetDialogMessagesResponse {
  repeated Message messages = 1;
}

message DeleteMessageRequest {
  string message_id = 1;
  string user_id = 2;
}

message DeleteMessageResponse {
}

message UpdateMessageRequest {
  string message_id = 1;
  MessageContent content = 2;
  string user_id = 3;
}

message UpdateMessageResponse {
  Message message = 1;
}

message SearchMessagesRequest {
  string dialog_id = 1;
  string offset_id = 2;
  uint64 limit = 3;
  string user_id = 4;
  string query = 5;
}

message SearchMessagesResponse {
  repeated Message messages = 1;
}

message SendReplyRequest {
  string sender_id = 1;
  string dialog_id = 2;
  MessageContent content = 3;
  string reply_to_id = 4;
}

message SendReplyResponse {
  Message message = 1;
}

message GetRepliesRequest {
  string message_id = 1;
  string user_id = 2;
  uint64 limit = 3;
  string offset_id = 4;
}

message GetRepliesResponse {
  repeated Message messages = 1;
}
